<resources>
    <!--activity title-->
    <string name="app_name">effort</string>
    <string name="title_activity_main">目标</string>
    <string name="title_activity_detail">详细</string>
    <string name="title_activity_add">添加</string>
    <string name="title_activity_edit">编辑</string>
    <string name="title_activity_report">年度报告</string>

    <!--侧滑菜单-->
    <string name="navigation_drawer_open">打开导航菜单</string>
    <string name="navigation_drawer_close">关闭导航菜单</string>

    <!--bar-->
    <string name="action_report">年度报告</string>
    <string name="action_punch">打卡</string>
    <string name="action_add">添加目标</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_share">分享</string>

    <!--菜单-->
    <string name="backup">备份数据</string>
    <string name="download">下载数据</string>
    <string name="abort">关于</string>
    <string name="mail">报告问题</string>
    <string name="copyright">版权信息</string>

    <!--消息-->
    <string name="msg_work">功能开发中！</string>

    <!-- MainActivity -->
    <string name="period">. </string>
    <string name="punch_to_day">今日打卡</string>
    <string name="ok">确定</string>
    <string name="mail_title">effort 安卓版本的意见反馈。</string>

    <!-- AddActivity -->
    <string name="form_add_title">目标：</string>
    <string name="form_add_start">起始日期：</string>
    <string name="form_add_alarm">提醒时间：</string>
    <string name="form_btn_ok">确定</string>

    <!-- ReportActivity -->
    <string name="month">月</string>
    <string name="report_chart_title">每月设定目标数目</string>

    <!-- DetailActivity -->
    <string name="startDate">开始日期：</string>
    <string name="alarm_off">提醒关闭</string>
    <string name="progress">进行中</string>
    <string name="complete">已完成</string>
    <string name="delete_caption">删除</string>
    <string name="delete_confirm">确认删除吗？</string>
    <string name="date_caption">开始日期变更</string>
    <string name="date_confirm">变更开始日期，会导致之前的打卡记录被重置为未打卡状态，确认进行吗？</string>
    <string name="OK">确认</string>
    <string name="CANCEL">取消</string>
    <string name="share_title">分享</string>

    <!-- AbortActivity -->
    <string name="title_activity_abort">关于</string>
    <string name="abort_app_name">目标28</string>
    <string name="abort_detail">一个习惯的培养并非一朝一夕便可以完成的。它需要经过长期、反复地坚持，最后才能成为一个不易抛弃的真正的习惯。一个好习惯无论其大小。你只要坚持培养下来了，都是件非常好的、有益的事。“目标28”是为此而生的一款习惯记录工具，以打卡的形式，记录你每一天的努力。</string>
    <string name="abort_subject">帮助培养习惯的打卡工具。</string>
    <string name="abort_author">作者：</string>
    <string name="abort_author_memo">宋雷，一位在软件行业打滚了多年的程序员，喜欢美食、读书、健身和编程。</string>
    <string name="abort_version">版本 1.0.0</string>
    <string name="abort_copyright">版权所有 2016 Vigorx工作室,保留所有权利。</string>

    <!-- Alarm -->
    <string name="alarm_title">提醒</string>
</resources>
