<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_menu_backup"
            android:title="@string/backup" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/download" />
    </group>

    <item android:title="@string/abort">
        <menu>
            <item
                android:id="@+id/nav_copyright"
                android:icon="@drawable/ic_menu_copyright"
                android:title="@string/copyright" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_mail"
                android:title="@string/mail" />
        </menu>
    </item>

</menu>
